--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
   </head>
   <script type="module">
-    import init from './birdy_bird.js'
+    import init from './out/game.js'
     init()
   </script>
 </html>
